[project]
name = "distributed-systems-algorithms"
version = "0.1.0"
description = "Algorithms & implementation for communication, synchronization, and mutex tasks"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "mpi4py>=4.1.0",
    "ruff>=0.12.7",
]
[tool.setuptools]
py-modules = []
